# mastering_python

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  linters_cheatsheet.md  mypy.ini  pyproject.toml
chat/: client.py  server.py
chat/tcp_socket/: console_client.py
chat/websockets/: asyncio_sandbox.py
docs/: Mastering_Python_overview.md  Project_interview_#1.md
quiz/: main.py  question_model.py  quiz_brain.py  quiz_data.py  quiz_ui.py
quiz/knowledge_base/: 3_levels_syllabus.md  dictionaries_to_play.txt  skip_for_flake.py  typeplay.py
src/: demos_examples.py
src/chat/tcp_socket/: helpers.py  server.py  ui_client.py
src/chat/websockets/: client.py  server.py
src/quiz/: main.py  question_models.py  quiz_brain.py  quiz_data.py  quiz_ui.py
src/quiz/knowledge_base/: three_levels_syllabus.md  three_levels_syllabus.py
src/quiz/knowledge_base/exercises/: classplay.py  keywordplay.py
src/snake_path/: __main__.py  game.py  helpers.py  models.py  sandbox.py  settings.py
src/snake_path/assets/exercises/: get_zen.py  py_dos_and_donts.py  text.txt
tests/: config.py  conftest.py  test_demos_examples.py  test_environment.py  test_examples.py  test_widget.py
tests/chat/: conftest.py
tests/quiz/: conftest.py  test_question_models.py
