[tool.poetry]
name = "mastering_python"
version = "0.1.0"
description = ""
authors = ["Ivan Prytula<ivanprytula87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^4.0.1"

[tool.black]
line-length=88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
)/'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
