[tool.poetry]
name = "mastering_python"
version = "0.1.0"
description = "learn & practice in writing best Python code ever"
authors = ["Ivan Prytula<ivanprytula87@gmail.com>"]
license = "GPL v3"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^4.0.1"
mypy = "^0.940"
pre-commit = "^2.17.0"

[tool.black]
line-length=88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
)/'''
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''
skip-magic-trailing-comma = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
